cmake_minimum_required(VERSION 3.10)

# set the project name
project(Bitwise)

add_executable(LargerSmallerNumber LargerSmallerNumber.cpp)
add_executable(Product Product.cpp)
add_executable(endianness endianness.cpp)
add_executable(arithmatic arithmatic.cpp)
add_executable(conversion conversion.cpp)